fixing a bug preventing from registring images in post to associate improving error messages/jump to anchor on error

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -426,3 +426,10 @@ body{
 .icon-position-after {
 	margin-left: 6px;
 }
+
+.with-errors.has-error {
+	background-color: red;
+	color: white;
+	padding: 5px;
+	font-weight: bold;
+}
